--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-240.6KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.41MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1022.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-385.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-171.0KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-499.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-310.8KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇺🇸 美国-3.15MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-4.01MB/s(Youtube:不良林), server: 165.154.253.49, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 台湾-10.37MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.74MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 台湾-6.66MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.99MB/s(Youtube:不良林), server: v2jp3-ws-tls.ytv2line.top, port: 48103, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2jp3-ws-tls.ytv2line.top}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1022.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-385.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1022.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-385.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1022.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-385.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1022.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-385.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1022.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-385.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1022.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-385.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1022.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-385.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-171.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
