--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-310.8KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇸🇬 新加坡-2.31MB/s(Youtube:不良林), server: 165.154.253.34, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-214.2KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.39MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 台湾-6.66MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-6.49MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.93MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.44MB/s(Youtube:不良林), server: v2hk-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk-ws-tls.ytv2line.top}}
   - {name: 🇨🇳 中国-6.99MB/s(Youtube:不良林), server: v2jp3-ws-tls.ytv2line.top, port: 48103, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2jp3-ws-tls.ytv2line.top}}
   - {name: 🇺🇸 美国-946.1KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.36MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-361.0KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.65MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-946.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-361.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-946.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-361.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-946.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-361.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-946.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-361.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-946.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-361.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-946.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-361.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-946.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-361.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
